<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/WhiteSmoke"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pantry_preferences"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchExpiryAlerts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expiring_soon_alerts"
            android:paddingTop="16dp"
            android:paddingBottom="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_alerts_when_ingredients_are_nearing_expiry"
            android:textSize="13sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/smart_pantry_manager"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cook_what_you_ve_got"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="8dp" />

    </LinearLayout>

    <include layout="@layout/bottom_navigation" />

</LinearLayout>