<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WhiteSmoke">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/textRecipeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_name"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="28dp" />

        <LinearLayout
            android:id="@+id/ingredientContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/method"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="28dp" />

        <TextView
            android:id="@+id/textRecipeMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:lineSpacingExtra="6dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp" />

    </LinearLayout>

</ScrollView>