<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/WhiteSmoke"
    tools:context=".SuggestedRecipesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/suggested_recipes"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/suggested_recipes_with_pantry_ingredients"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="4dp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/recipeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp" />

        <TextView
            android:id="@+id/textNoRecipes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_recipes_match_your_pantry_yet_nadd_more_ingredients"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:visibility="gone" />

    </FrameLayout>

    <include layout="@layout/bottom_navigation" />

</LinearLayout>