<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:orientation="horizontal"
    android:background="@color/LightGrey"
    android:elevation="10dp"
    android:gravity="center"
    tools:ignore="DisableBaselineAlignment">

    <LinearLayout
        android:id="@+id/nav_pantry"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/baseline_kitchen_24"
            android:contentDescription="@string/pantry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pantry"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="3dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/nav_recipes"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/baseline_menu_book_24"
            android:contentDescription="@string/recipes" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipes"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="3dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/nav_settings"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/baseline_settings_suggest_24"
            android:contentDescription="@string/settings" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="3dp" />

    </LinearLayout>

</LinearLayout>